# telegram_framework

./: Cargo.toml  README.md
crates/framework/examples/: playground.rs
crates/framework/src/: bots_api.rs
crates/framework/src/enums/: chat_action.rs  emoji.rs  mod.rs
crates/framework/src/structs/: mod.rs
crates/framework/src/structs/options/: mod.rs  send_options.rs
crates/framework/src/traits/: bots_api.rs  file_sender.rs  mod.rs  sender.rs
examples/: playground.rs
src/: lib.rs
src/structs/: bots_api.rs  chat_invite_link.rs  command.rs  config.rs  message.rs  mod.rs  webhook.rs
src/tests/structs/: bots_api.rs  mod.rs
